--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "esnext"
     ],
     "allowJs": true,
+    "baseUrl": ".",
+    "rootDir": "src",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
