google analytics and favicon

--- a/package.json
+++ b/package.json
@@ -4,25 +4,17 @@
   "author": "Pragyakar Joshi <pragyakar@fusemachines.com>",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
     "google-translate": "^3.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.0",
+    "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
-    "source-map-explorer": "^2.4.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -33,7 +25,15 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "source-map-explorer": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
