--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
-    "google-translate": "^3.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -18,21 +17,21 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
     "@types/react-custom-scrollbars": "^4.0.6",
+    "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "source-map-explorer": "^2.4.0"
   },
   "scripts": {
@@ -45,9 +44,7 @@
     "deploy": ""
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "hooks": {}
   },
   "lint-staged": {
     "*.{ts,tsx,js}": [
