--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yarn": "^1.22.4",
+    "yarn-install": "^1.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
