--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,10 @@
   "name": "nCOVID-19 Nepal",
   "icons": [
     {
+      "src": "fav-icon-64.jpg",
+      "type": "image/jpg"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
