--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "author": "Pragyakar Joshi <pragyakar@fusemachines.com>",
   "private": true,
   "dependencies": {
-    "@types/react-scrollspy": "^3.3.2",
     "axios": "^0.19.2",
     "i18next": "^19.3.3",
     "i18next-browser-languagedetector": "^4.0.2",
@@ -24,6 +23,8 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -34,10 +35,18 @@
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-scrollspy": "^3.3.2",
     "@types/react-select": "^3.0.11",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
     "source-map-explorer": "^2.4.0"
   },
