chores: license updated

--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "deploy": ""
   },
   "husky": {
-    "hooks": {}
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "lint-staged": {
     "*.{ts,tsx,js}": [
